fluid function update, css variables generating

--- a/generators/app/templates/static/scss/settings/_settings.breakpoints.scss
+++ b/generators/app/templates/static/scss/settings/_settings.breakpoints.scss
@@ -6,6 +6,8 @@ $breakpoint-md: 800px;
 $breakpoint-lg: 1140px;
 $breakpoint-xl: 1440px;
 $breakpoint-xxl: 1920px;
+$breakpoint-xxxl: 3840px;
+
 
 /**
  * Breakpoints - map
@@ -16,4 +18,5 @@ $settings-breakpoints: (
     "lg": $breakpoint-lg,
     "xl": $breakpoint-xl,
     "xxl": $breakpoint-xxl,
+    "xxxl": $breakpoint-xxxl,
 );
