--- a/generators/app/templates/static/scss/settings/_settings.spacings.scss
+++ b/generators/app/templates/static/scss/settings/_settings.spacings.scss
@@ -1,4 +1,29 @@
 /**
+* Set useContainer to true if you are using container design, and dont need scaling for > xxl breakpoint
+* @var {boolean} $useContainer - Use container
+ */
+$use-container: true;
+
+/**
+ * Set use-css-var to true if you want to use css var for spacing
+ * @var {boolean} $use-css-var - Use css var
+ */
+$use-css-var: true;
+
+/**
+ * Set variable-prefix to change css var prefix
+ * @var {string} $variable-prefix - Variable prefix
+*/
+$css-variable-prefix: "--";
+
+/**
+ * big screen coefficient for fluid sizing, used for > xxl breakpoint
+ * Used for lowering sizes on big screens
+ * @var {number} $big-viewport-coefficient - Big viewport coefficient
+ */
+$big-viewport-coefficient: 0.8;
+
+/**
  * Spacing map
  */
 $settings-spacings: (
