--- a/generators/app/templates/static/scss/settings/_settings.colors.scss
+++ b/generators/app/templates/static/scss/settings/_settings.colors.scss
@@ -32,7 +32,7 @@ $tertiary-color: $white;
 
 /**
  * Colors - map
- * Used for generating css variables
+ * used for generating css variables
  */
 $settings-colors: (
     "white": $white,
