--- a/generators/app/templates/static/scss/utilities/_utilities.typography.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.typography.scss
@@ -1,63 +1,6 @@
-@use "sass:math";
-
-@mixin a5 {
-    font-size: var(--a5);
-    font-family: $font-primary;
-    line-height: 100%;
-    letter-spacing: normal;
-}
-
-@mixin a4 {
-    font-size: var(--a4);
-    font-family: $font-secondary;
-    line-height: 107%;
-    letter-spacing: math.div(-1.33, 64) * 1em;
-}
-
-@mixin a3 {
-    font-size: var(--a3);
-    font-family: $font-primary;
-    line-height: 116%;
-    letter-spacing: math.div(-1, 48) * 1em;
-}
-
-@mixin a2 {
-    font-size: var(--a2);
-    font-family: $font-secondary;
-    line-height: 112%;
-    letter-spacing: math.div(-0.8, 41) * 1em;
-}
-
-@mixin a1 {
-    font-size: var(--a1);
-
-    font-family: $font-primary;
-    line-height: 130%;
-    letter-spacing: normal;
-}
-
-@mixin b0 {
-    font-size: var(--b0);
-
-    font-family: $font-secondary;
-    line-height: 144%;
-    letter-spacing: normal;
-}
-
-@mixin b1 {
-    font-size: var(--b1);
-    font-family: $font-primary;
-    line-height: 110%;
-    letter-spacing: normal;
-}
-
-@mixin b2 {
-    font-size: var(--b2);
-    font-family: $font-secondary;
-    line-height: 133%;
-    letter-spacing: math.div(-0.1, 15) * 1em;
-}
-
+/**
+ * Typography utility classes
+ */
 .u-a5 {
     @include a5;
 }
