--- a/generators/app/templates/static/scss/tools/_tools.fluid.scss
+++ b/generators/app/templates/static/scss/tools/_tools.fluid.scss
@@ -68,6 +68,10 @@
     $min-size-rem: round(rem($min-size), 2);
     $max-size-rem: round(rem($max-size), 2);
 
+    @if $min-size == $max-size {
+        @return $min-size-rem;
+    }
+
     @return clamp(#{$min-size-rem}, #{$slope-to-unit}#{$unit} + #{$intercept-rem}, #{$max-size-rem});
 }
 
