if min = max, return one, no need to use clamp for 2 same numbers(min and max)

--- a/generators/app/templates/static/scss/tools/_tools.fluid.scss
+++ b/generators/app/templates/static/scss/tools/_tools.fluid.scss
@@ -67,6 +67,10 @@
     $intercept-rem: round(rem($min-size - $slope * $min-breakpoint), 2);
     $min-size-rem: round(rem($min-size), 2);
     $max-size-rem: round(rem($max-size), 2);
+    
+    @if $min-size == $max-size {
+        @return $min-size-rem;
+    }
 
     @return clamp(#{$min-size-rem}, #{$slope-to-unit}#{$unit} + #{$intercept-rem}, #{$max-size-rem});
 }
