--- a/generators/app/templates/static/scss/settings/_settings.index.scss
+++ b/generators/app/templates/static/scss/settings/_settings.index.scss
@@ -3,11 +3,12 @@
  */
 @import "settings.breakpoints";
 @import "settings.colors";
+@import "settings.grid";
+@import "settings.ratio";
 @import "settings.spacings";
 @import "settings.transitions";
 @import "settings.typography";
 @import "settings.zindex";
-@import "settings.ratio";
 
 /**
  * Third party settings
