--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -3,13 +3,14 @@
  */
 @import "tools.breakpoints";
 @import "tools.fluid";
+@import "tools.grid";
 @import "tools.interaction";
+@import "tools.percentage";
+@import "tools.scrollbar";
 @import "tools.transitions";
 @import "tools.typography";
 @import "tools.viewport";
 @import "tools.zindex";
-@import "tools.scrollbar";
-@import "tools.percentage";
 
 /**
  * Third party tools
