--- a/generators/app/templates/static/scss/utilities/_utilities.index.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.index.scss
@@ -1,6 +1,9 @@
 /**
  * Utilities
  */
-@import "utilities.icons";
+@import "utilities.display";
 @import "utilities.typography";
+@import "utilities.spacing";
 @import "utilities.ratio";
+@import "utilities.icon";
+@import "utilities.content-editor";
