--- a/generators/app/templates/static/scss/settings/_settings.colors.scss
+++ b/generators/app/templates/static/scss/settings/_settings.colors.scss
@@ -3,19 +3,20 @@
  */
 $white: #ffffff;
 $black: #000000;
-$black-0: rgba(#000000, 0);
-$black-10: rgba(#000000, 0.1);
-$black-20: rgba(#000000, 0.2);
-$black-30: rgba(#000000, 0.3);
-$black-40: rgba(#000000, 0.4);
-$black-50: rgba(#000000, 0.5);
-$black-60: rgba(#000000, 0.6);
-$black-70: rgba(#000000, 0.7);
-$black-80: rgba(#000000, 0.8);
-$black-90: rgba(#000000, 0.9);
-$black-100: rgba(#000000, 1);
+$black-0: rgba($black, 0);
+$black-10: rgba($black, 0.1);
+$black-20: rgba($black, 0.2);
+$black-30: rgba($black, 0.3);
+$black-40: rgba($black, 0.4);
+$black-50: rgba($black, 0.5);
+$black-60: rgba($black, 0.6);
+$black-70: rgba($black, 0.7);
+$black-80: rgba($black, 0.8);
+$black-90: rgba($black, 0.9);
+$black-100: rgba($black, 1);
 $mango: #f7b334;
 $slate: #3c5163;
+$red: #ff0000;
 
 /**
  * Colors - focus accessibility
