--- a/generators/app/templates/static/scss/settings/_settings.ratio.scss
+++ b/generators/app/templates/static/scss/settings/_settings.ratio.scss
@@ -2,7 +2,37 @@
  * Ratio map
  */
 $settings-ratio: (
-        (2:1),
-        (4:3),
-        (16:9),
+    (
+        1: 2,
+    ),
+    (
+        2: 1,
+    ),
+    (
+        1: 2,
+    ),
+    (
+        3: 1,
+    ),
+    (
+        1: 3,
+    ),
+    (
+        3: 2,
+    ),
+    (
+        2: 3,
+    ),
+    (
+        4: 3,
+    ),
+    (
+        3: 4,
+    ),
+    (
+        16: 9,
+    ),
+    (
+        9: 16,
+    )
 ) !default;
