--- a/generators/app/templates/static/scss/settings/_settings.zindex.scss
+++ b/generators/app/templates/static/scss/settings/_settings.zindex.scss
@@ -2,6 +2,10 @@
  * Z-index map
  */
 $settings-zindex: (
+    modal: 300,
+    navigation: 200,
+    mobile-navigation: 100,
     default: 1,
     zero: 0,
+    negative: -1,
 );
