--- a/generators/app/templates/static/scss/utilities/_utilities.icon.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.icon.scss
@@ -1,8 +1,8 @@
 .u-icon {
     display: inline-block;
     width: 1em;
-    height: 100%;
+    height: auto;
     stroke-width: 0;
-    stroke: currentcolor;
-    fill: currentcolor;
+    stroke: currentColor;
+    fill: currentColor;
 }
