--- a/generators/app/templates/static/scss/components/_components.accordion.scss
+++ b/generators/app/templates/static/scss/components/_components.accordion.scss
@@ -11,15 +11,14 @@
     }
 
     &__header {
-        @include fluidValue("padding-top", "s-20");
-        @include fluidValue("padding-bottom", "s-20");
-        @include fluidValue("gap", "s-60");
-
+        padding-top: var(--s-20);
+        padding-bottom: var(--s-20);
         position: relative;
         cursor: pointer;
         display: flex;
         align-items: baseline;
         justify-content: space-between;
+        gap: var(--s-60);
 
         &.is-opened {
         }
@@ -31,9 +30,9 @@
     &__indicator {
         @include button-reset;
         @include focus;
-        @include fluidValue("width", "s-20");
-        @include fluidValue("height", "s-20");
 
+        width: var(--s-20);
+        height: var(--s-20);
         position: relative;
         flex-shrink: 0;
         flex-grow: 0;
@@ -72,7 +71,7 @@
     }
 
     &__panel-inner {
-        @include fluidValue("padding-bottom", "s-20");
+        padding-bottom: var(--s-20);
 
         p {
             margin-bottom: 1em;
