--- a/generators/app/templates/static/scss/components/_components.breadcrumbs.scss
+++ b/generators/app/templates/static/scss/components/_components.breadcrumbs.scss
@@ -11,8 +11,6 @@
         justify-content: center;
 
         &:before {
-            @include fluidValue("margin-left", "s-10");
-            @include fluidValue("margin-right", "s-10");
             @include fluidValue("width", null, 6px);
             @include fluidValue("height", null, 8px);
 
@@ -24,6 +22,8 @@
             background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2IiBoZWlnaHQ9IjgiIGZpbGw9Im5vbmUiPjxwYXRoIGZpbGw9IiMwMDNFMzMiIGQ9Ik0wIDcuNXYtN0w2IDQgMCA3LjVaIi8+PC9zdmc+");
             flex-shrink: 0;
             flex-grow: 0;
+            margin-left: var(--s-10);
+            margin-right: var(--s-10);
         }
 
         &:first-child {
