--- a/generators/app/templates/static/scss/components/_components.social-icons.scss
+++ b/generators/app/templates/static/scss/components/_components.social-icons.scss
@@ -1,8 +1,7 @@
 .c-social-icons {
-    @include fluidValue("gap", "s-20");
-
     display: flex;
     align-items: center;
+    gap: var(--s-20);
     font-size: 1.5em;
 
     li,
