--- a/generators/app/templates/static/scss/utilities/_utilities.content-editor.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.content-editor.scss
@@ -7,7 +7,7 @@
     > h4,
     > h5,
     > h6 {
-        @include fluidValue("margin-bottom", "s-30");
+        margin-bottom: var(--s-30);
 
         &:last-child {
             margin-bottom: 0;
@@ -18,7 +18,7 @@
         + h4,
         + h5,
         + h6 {
-            @include fluidValue("margin-top", "s-60");
+            margin-top: var(--s-60);
         }
 
         > u {
@@ -37,8 +37,9 @@
     > p,
     > ul,
     > ol {
-        @include fluidValue("margin-bottom", "s-15");
         @include b0;
+
+        margin-bottom: var(--s-15);
 
         &:last-child {
             margin-bottom: 0;
@@ -49,7 +50,7 @@
         + h4,
         + h5,
         + h6 {
-            @include fluidValue("margin-top", "s-60");
+            margin-top: var(--s-60);
         }
 
         > u {
@@ -90,7 +91,7 @@
     }
 
     li {
-        @include fluidValue("margin-bottom", "s-15");
+        margin-bottom: var(--s-15);
 
         &:last-child {
             margin-bottom: 0;
@@ -156,16 +157,12 @@
     }
 
     hr {
-        @include fluidValue("margin-top", "s-60");
-        @include fluidValue("margin-bottom", "s-60");
-
         border-top: 1px solid $black;
         border-left: none;
         border-right: none;
         border-bottom: none;
         padding: 0;
-        margin-left: 0;
-        margin-right: 0;
+        margin: var(--s-60) 0;
         outline: none;
         box-shadow: none;
 
@@ -179,8 +176,8 @@
     }
 
     .wp-block-table {
-        @include fluidValue("margin-top", "s-60");
-        @include fluidValue("margin-bottom", "s-60");
+        margin-top: var(--s-60);
+        margin-bottom: var(--s-60);
 
         &:first-child {
             margin-top: 0;
@@ -200,16 +197,14 @@
         }
 
         tr {
-            @include fluidValue("gap", "s-15");
-
             border-bottom: 1px solid $black;
             display: flex;
+            gap: var(--s-15);
         }
 
         td {
-            @include fluidValue("padding-top", "s-15");
-            @include fluidValue("padding-bottom", "s-15");
-
+            padding-top: var(--s-15);
+            padding-bottom: var(--s-15);
             flex-grow: 1;
             flex-basis: 0;
             min-width: 0;
@@ -232,10 +227,9 @@
     }
 
     .wp-block-quote {
-        @include fluidValue("margin-top", "s-60");
-        @include fluidValue("margin-bottom", "s-60");
-        @include fluidValue("padding-left", "s-15");
-
+        margin-top: var(--s-60);
+        margin-bottom: var(--s-60);
+        padding-left: var(--s-15);
         border-left: 3px solid $black;
 
         &:first-child {
@@ -251,9 +245,9 @@
         }
 
         cite {
-            @include fluidValue("margin-top", "s-15");
             @include b1;
 
+            margin-top: var(--s-15);
             display: block;
 
             > u {
@@ -274,8 +268,8 @@
     }
 
     .wp-block-embed {
-        @include fluidValue("margin-top", "s-60");
-        @include fluidValue("margin-bottom", "s-60");
+        margin-top: var(--s-60);
+        margin-bottom: var(--s-60);
 
         &:first-child {
             margin-top: 0;
@@ -307,8 +301,8 @@
     }
 
     .wp-block-image {
-        @include fluidValue("margin-top", "s-60");
-        @include fluidValue("margin-bottom", "s-60");
+        margin-top: var(--s-60);
+        margin-bottom: var(--s-60);
 
         &:first-child {
             margin-top: 0;
@@ -337,8 +331,9 @@
         }
 
         figcaption {
-            @include fluidValue("margin-top", "s-15");
             @include b1;
+
+            margin-top: var(--s-15);
 
             > u {
                 text-decoration: underline;
@@ -355,9 +350,8 @@
     }
 
     .c-gutenberg-block {
-        @include fluidValue("margin-top", "s-60");
-        @include fluidValue("margin-bottom", "s-60");
-
+        margin-top: var(--s-60);
+        margin-bottom: var(--s-60);
         position: relative;
         z-index: getZindex(default);
 
